// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page Styled Components Should match the stored <LoginFormContainer /> snapshot 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  border-radius: 5px;
  width: 50%;
  padding: 50px;
}

<div
  className="c0"
/>
`;

exports[`Login Page Styled Components Should match the stored <LoginFormContainerLeft /> snapshot 1`] = `
.c0 {
  padding-right: 15px;
  color: white;
}

<div
  className="c0"
/>
`;

exports[`Login Page Styled Components Should match the stored <LoginFormContainerRight /> snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 15px;
  color: white;
}

<div
  className="c0"
/>
`;

exports[`Login Page Styled Components Should match the stored <LoginPageContainer /> snapshot 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
/>
`;